# blabby

./: .clang-format  .gitignore  .pre-commit-config.yaml  AbstractClock_8hpp_source.html  AbstractHeader_8hpp_source.html  AbstractIconButton_8hpp_source.html  AbstractListEntry_8hpp_source.html  AvTransportServiceValidator_8h_source.html  BaseValidator_8h_source.html  BrowseResponse_8h_source.html  BrowseResponse_8hpp_source.html  BrowseResult_8h_source.html  CMakeLists.txt  CMakePresets.json  ConnectionManagerServiceValidator_8h_source.html  ConnectionManagerServiceValidator_8hpp_source.html  ContentDirectoryServiceValidator_8h_source.html  CurrentConnectionIdsResult_8h_source.html  CurrentConnectionInfoResult_8h_source.html  DescriptionFetcherBackend_8h_source.html  DescriptionFetcher_8h_source.html  DescriptionFetcher_8hpp_source.html  DeviceDescriptionParser_8h_source.html  DeviceDescription_8h_source.html  DeviceDescription_8hpp_source.html  ErrorResult_8h_source.html  ErrorResult_8hpp_source.html  GetCurrentConnectionIdsResponse_8h_source.html  GetCurrentConnectionIdsResponse_8hpp_source.html  GetCurrentConnectionInfoResponse_8h_source.html  GetDeviceCapabilitiesResponse_8h_source.html  GetDeviceCapabilitiesResponse_8hpp_source.html  GetMediaInfoResponse_8h_source.html  GetMediaInfoResponse_8hpp_source.html  GetPositionInfoResponse_8h_source.html  GetPositionInfoResponse_8hpp_source.html  GetProtocolInfoResponse_8h_source.html  GetProtocolInfoResponse_8hpp_source.html  GetTransportInfoResponse_8h_source.html  GetTransportSettingsResponse_8h_source.html  (+438 more)
doc/: Architecture.md  CMakeLists.txt  Doxygen.conf.in  MainPage.md
docs/: AbstractClock_8hpp_source.html  AbstractDialog_8hpp_source.html  AbstractHeader_8hpp_source.html  AbstractIconButton_8hpp_source.html  AbstractInteractiveControl_8hpp_source.html  AbstractListEntry_8hpp_source.html  AbstractSwitch_8hpp_source.html  AvTransportServiceValidator_8hpp_source.html  BaseValidator_8hpp_source.html  BrowseResponse_8hpp_source.html  CMakeLists.txt  ClientConnection_8hpp_source.html  ConnectionManagerServiceValidator_8hpp_source.html  ContentDirectoryServiceValidator_8hpp_source.html  DescriptionFetcherBackend_8hpp_source.html  DescriptionFetcher_8hpp_source.html  DeviceDescriptionParser_8hpp_source.html  DeviceDescription_8hpp_source.html  Doxygen.conf.in  ErrorResult_8hpp_source.html  EventBackend_8hpp_source.html  EventPropertyReader_8hpp_source.html  GetCurrentConnectionIdsResponse_8hpp_source.html  GetCurrentConnectionInfoResponse_8hpp_source.html  GetDeviceCapabilitiesResponse_8hpp_source.html  GetMediaInfoResponse_8hpp_source.html  GetPositionInfoResponse_8hpp_source.html  GetProtocolInfoResponse_8hpp_source.html  GetTransportInfoResponse_8hpp_source.html  GetTransportSettingsResponse_8hpp_source.html  GetVolumeResponse_8hpp_source.html  HttpCommon_8hpp_source.html  HttpEventBackend_8hpp_source.html  HttpEventServer_8hpp_source.html  HttpEventSubscriptionHandle_8hpp_source.html  HttpSoapBackend_8hpp_source.html  HttpSoapCall_8hpp_source.html  HttpSoapMessageTransmitter_8hpp_source.html  IServiceProvider_8hpp_source.html  IconDescription_8hpp_source.html  (+442 more)
docs/pages/: Architecture.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  enums_1.js  enums_3.js  enums_4.js  enumvalues_1.js  enumvalues_2.js  (+45 more)
docs/style/: README.md  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-sidebar-only.css  doxygen-awesome-tabs.js  doxygen-awesome.css  header.html
http/src/: BlabbyHttpConfig.cmake.in  CMakeLists.txt  HttpCommon.hpp  Server.cpp  Server.hpp  ServerRequest.cpp  ServerRequest.hpp  ServerResponse.cpp  ServerResponse.hpp
http/test/: CMakeLists.txt  ServerShould.cpp  ServerShould.hpp
multimedia/: CMakeLists.txt
multimedia/src/: CMakeLists.txt  Item.cpp  Item.hpp  MediaItem.cpp  MediaItem.h  MediaItem.hpp  MediaSource.cpp  MediaSource.h  MediaSource.hpp  Provider.cpp  Provider.h  Provider.hpp  ProviderLoader.cpp  ProviderLoader.h  ProviderLoader.hpp  Renderer.cpp  Renderer.hpp  RendererProvider.cpp  RendererProvider.hpp  Source.cpp  Source.hpp
multimedia/test/: CMakeLists.txt  ItemShould.cpp  ItemShould.hpp  MediaItemShould.cpp  MediaItemShould.h  MediaSourceShould.cpp  MediaSourceShould.h  MediaSourceShould.hpp  ProviderLoaderShould.cpp  ProviderLoaderShould.h  ProviderLoaderShould.hpp  ProviderShould.cpp  ProviderShould.hpp  RendererProviderShould.cpp  RendererProviderShould.hpp  RendererShould.cpp  RendererShould.hpp  SourceShould.cpp  SourceShould.hpp
multimedia_test_helper/: CMakeLists.txt
multimedia_test_helper/src/: CMakeLists.txt  LoggingCategories.cpp  LoggingCategories.hpp  TestMediaSource.cpp  TestMediaSource.hpp  TestProvider.cpp  TestProvider.hpp  TestProviderLoader.cpp  TestProviderLoader.hpp  TestSource.cpp  TestSource.hpp
plugincore/: CMakeLists.txt
plugincore/include/: MultiMediaPlugin.h  MultimediaPlugin.h  PluginCore_Export.h  PluginVersion.h
plugincore/resource/: resource.qrc
plugincore/src/: MultimediaPlugin.cpp  MultimediaPlugin.h  MultimediaPlugin_p.h  PluginVersion.h
plugincore/test/: CMakeLists.txt  MultimediaPluginShould.cpp  MultimediaPluginShould.h
plugins/media_server/: CMakeLists.txt
providers/media_server/: CMakeLists.txt
shell/: CMakeLists.txt
shell/resource/: resource.qrc
shell/src/: AbstractClock.cpp  AbstractClock.h  AbstractIconButton.cpp  AbstractIconButton.hpp  CMakeLists.txt  Clock.cpp  Clock.h  LoggingCategories.cpp  LoggingCategories.h  LoggingCategories.hpp  MediaItemModel.cpp  MediaItemModel.hpp  MediaPlayer.cpp  (+9 more)
upnpav/: BlabbyUPnPAVConfig.cmake.in  CMakeLists.txt
upnpav_test_helper/: CMakeLists.txt
(+802 files in other folders)
